# cmake-basics

./: Cmake And vcpkg.pptx
ex01_cmake_simple/: CMakeLists.txt
ex02_cmake_better/: CMakeLists.txt
ex02_cmake_better/src/: CMakeLists.txt
ex03_libs/: CMakeLists.txt
ex03_libs/src/: CMakeLists.txt
ex03_libs/src/SharedLib/: CMakeLists.txt  SHAREDLIB_PUBLIC.h  SharedLibClass.cpp  SharedLibClass.h
ex03_libs/src/StaticLib/: CMakeLists.txt  StaticLibClass.cpp  StaticLibClass.h
ex03_libs/src/libtest/: CMakeLists.txt  main.cpp
ex04_fetch/: CMakeLists.txt
ex04_fetch/cmake/: cli11.cmake
ex04_fetch/src/: CMakeLists.txt  main.cpp
ex05_vcpkg/: CMakeLists.txt
ex05_vcpkg/src/: CMakeLists.txt  main.cpp
ex06_vcpkg_manifest/: CMakeLists.txt  vcpkg.json
ex06_vcpkg_manifest/src/: CMakeLists.txt  main.cpp
ex07_config_file/: CMakeLists.txt  vcpkg.json
ex07_config_file/src/: CMakeLists.txt  cmakeConfig.h.in  main.cpp
ex08_cuda/: CMakeLists.txt  vcpkg.json
ex08_cuda/src/: CMakeLists.txt
ex08_cuda/src/DMO/: CMakeLists.txt  DmoMesh.h  DmoVector.h  Metrics.h  Set.h  Solver.h  SolverCPU.h  SolverCPU_impl.h  dmoKernel.cu
ex08_cuda/src/ex01_Basic/: main.cpp
ex08_cuda/src/ex01_Basic_cpu/: main.cpp
